--- a/_sources/notebooks.ipynb
+++ b/_sources/notebooks.ipynb
@@ -8,6 +8,115 @@
     "\n",
     "Persamaan linear adalah dasar dalam aljabar dan digunakan dalam berbagai bidang seperti fisika, ekonomi, dan teknik. Memahaminya membantu dalam menyelesaikan banyak masalah kehidupan nyata, seperti perhitungan keuangan, kecepatan, dan optimasi."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tugas\n",
+    "\n",
+    "### Penyelesaian Sistem Persamaan Linear 3 Dimensi Menggunakan Eliminasi Gauss\n",
+    "Metode eliminasi Gauss digunakan untuk menentukan penyelesaian sistem persamaan linear, baik yang memiliki satu solusi, tak hingga solusi, maupun tanpa solusi.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 1. **Satu Solusi (Unik)**  \n",
+    "Contoh sistem persamaan:\n",
+    "\n",
+    "x + y + z = 6\n",
+    "\n",
+    "2x + 3y + z = 14\n",
+    "\n",
+    "y + 2z = 8\n",
+    "\n",
+    "\n",
+    "**Matriks Augmented:**\n",
+    "\n",
+    "\n",
+    "1 & 1 & 1 & | & 6 \n",
+    "2 & 3 & 1 & | & 14 \n",
+    "0 & 1 & 2 & | & 8\n",
+    "\n",
+    "\n",
+    "Langkah-langkah:\n",
+    "\n",
+    "1. Tukar baris jika perlu.\n",
+    "2. Eliminasi elemen di bawah elemen utama (pivot).\n",
+    "3. Bentuk eselon baris.\n",
+    "4. Substitusi mundur.\n",
+    "\n",
+    "Hasil akhirnya:\n",
+    "\n",
+    "\n",
+    "x = 2, \\quad y = 4, \\quad z = 2\n",
+    "\n",
+    "**Kesimpulan:** Sistem memiliki **satu solusi unik**.\n",
+    "\n",
+    "Link:\n",
+    "https://www.geogebra.org/m/j7bz5sz9\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2. **Tak Hingga Solusi**\n",
+    "Contoh sistem persamaan:\n",
+    "\n",
+    "x + y + z = 5\n",
+    "\n",
+    "2x + 2y + 2z = 10\n",
+    "\n",
+    "3x + 3y + 3z = 15\n",
+    "\n",
+    "**Matriks Augmented:**\n",
+    "\n",
+    "\n",
+    "1 & 1 & 1 & | & 5 \n",
+    "2 & 2 & 2 & | & 10 \n",
+    "3 & 3 & 3 & | & 15\n",
+    "\n",
+    "Bentuk eselon baris:\n",
+    "\n",
+    "1 & 1 & 1 & | & 5 \n",
+    "0 & 0 & 0 & | & 0 \n",
+    "0 & 0 & 0 & | & 0\n",
+    "\n",
+    "\n",
+    "**Kesimpulan:** Sistem memiliki **tak hingga banyak solusi** karena ada baris nol yang menunjukkan persamaan redundan.\n",
+    "\n",
+    "Link:\n",
+    "https://www.geogebra.org/m/dtxnmxwa\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 3. **Tanpa Solusi**\n",
+    "Contoh sistem persamaan:\n",
+    "\n",
+    "x + y + z = 3\n",
+    "\n",
+    "2x + 2y + 2z = 6\n",
+    "\n",
+    "x + y + z = 5\n",
+    "\n",
+    "**Matriks Augmented:**\n",
+    "\n",
+    "1 & 1 & 1 & | & 3 \n",
+    "2 & 2 & 2 & | & 6 \n",
+    "1 & 1 & 1 & | & 5\n",
+    "\n",
+    "\n",
+    "Bentuk eselon baris:\n",
+    "\n",
+    "1 & 1 & 1 & | & 3 \n",
+    "0 & 0 & 0 & | & 0 \n",
+    "0 & 0 & 0 & | & 2\n",
+    "\n",
+    "\n",
+    "Baris terakhir menunjukkan **kontradiksi (0 = 2)**.\n",
+    "\n",
+    "**Kesimpulan:** Sistem **tidak memiliki solusi (inkonsisten)**.\n",
+    "\n",
+    "Link:\n",
+    "https://www.geogebra.org/m/ut7hraa7\n"
+   ]
   }
  ],
  "metadata": {
